--- a/DHUCoinSmartContract/index.html
+++ b/DHUCoinSmartContract/index.html
@@ -32,35 +32,96 @@
 
 		<div>
 			<label for="toVerifyAdd" class="col-lg-2 control-label">Enter an address to verify</label>
-			<input id="toVerifyAdd" type="text">
+			<input id="toVerifyAdd" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
 
 			<button id="btnVerify">Verify Address</button>
 
 		</div>
-		
+
+		<hr>
 		<div>
 			<label for="addToRemove" class="col-lg-2 control-label">Enter an address to invalidate</label>
-			<input id="addToRemove" type="text">
+			<input id="addToRemove" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
 
 			<button id="btnRemoveAdd">Invalidate Address</button>
 
 		</div>
 
+		<hr>
 		<div>
 			<label for="addToChk" class="col-lg-2 control-label">Enter an address to check the verification status</label>
-			<input id="addToChk" type="text">
+			<input id="addToChk" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
 
 			<button id="btnCheckVer">Check if verified</button>
 
 		</div>
 
+		<hr>
 		<div>
-			<label for="updatePrice" class="col-lg-2 control-label">Enter new price</label>
-			<input id="updatePrice" type="text">
+			<label for="addToChkBal" class="col-lg-2 control-label">Enter an address to check balance</label>
+			<input id="addToChkBal" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
 
-			<button id="btnUpdatePrice">Update Price</button>
+			<button id="btnCheckBal">Check balance</button>
 
 		</div>
+
+		<hr>
+		<div>
+			<label for="valLiquidChk" class="col-lg-2 control-label">Enter a value to check liquidation</label>
+			<input id="valLiquidChk" type="text" placeholder="1000">
+
+			<button id="btnCheckLiq">Check Liquidation</button>
+
+		</div>
+
+		<hr>
+		<div>
+			<label for="updatePriceTop" class="col-lg-2 control-label">Enter new price</label>
+			<input id="updatePriceTop" type="text" placeholder="New top integer">
+
+			<button id="btnUpdatePrice">Update Price Numerator</button>
+
+		</div>
+
+		<hr>
+		<div>
+			<label for="updatePriceBtm" class="col-lg-2 control-label">Enter new price</label>
+			<input id="updatePriceBtm" type="text" placeholder="New bottom integer">
+
+			<button id="btnUpdateBtmPrice">Update Price Denominator</button>
+
+		</div>
+
+		<hr>
+		<div>
+			<button id="btnCheckSup">Check total supply</button>
+
+		</div>
+
+		<hr>
+		<div>
+			<button id="btnCheckSym">Check token symbol</button>
+
+		</div>
+
+		<hr>
+		<div>
+			<button id="btnCheckName">Check contract name</button>
+
+		</div>
+
+		<hr>
+		<div>
+			<button id="btnCheckSBlk">Check ICO start block</button>
+
+		</div>
+		
+		<hr>
+		<div>
+			<button id="btnCheckEBlk">Check ICO end block</button>
+			
+		</div>
+
 
 </body>
 
