A few more functions added (Change main wallet and secondary wallet)

--- a/DHUCoinSmartContract/index.html
+++ b/DHUCoinSmartContract/index.html
@@ -1,128 +1,97 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
-
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script src="./node_modules/web3/dist/web3.min.js"></script>
-	<script src="javascript/functions.js" type="text/javascript"></script>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="./node_modules/web3/dist/web3.min.js"></script>
+    <script src="javascript/functions.js" type="text/javascript"></script>
 </head>
 
 <body>
-	<div class="container">
+    <div class="container">
+        <h1>DHUCoin Admin Page</h1>
+        <span id="countIns"></span>
+        <h2 id="transactionResult"></h2>
+        <div>
+            <span id="insTrans"></span>
+        </div>
+        <span id="transBlock"></span>
+        <hr>
+        <img id="loader" src="https://loading.io/spinners/double-ring/lg.double-ring-spinner.gif">
+        <div>
+            <label for="toVerifyAdd" class="col-lg-2 control-label">Enter an address to verify</label>
+            <input id="toVerifyAdd" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
+            <button id="btnVerify">Verify Address</button>
+        </div>
+        <hr>
+        <div>
+            <label for="addToRemove" class="col-lg-2 control-label">Enter an address to invalidate</label>
+            <input id="addToRemove" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
+            <button id="btnRemoveAdd">Invalidate Address</button>
+        </div>
+        <hr>
+        <div>
+            <label for="addMW" class="col-lg-2 control-label">Enter new main wallet address</label>
+            <input id="addMW" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
+            <button id="btnNewMW">Change Address</button>
+        </div>
+        <hr>
+        <div>
+            <label for="addToChk" class="col-lg-2 control-label">Enter an address to check the verification status</label>
+            <input id="addToChk" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
+            <button id="btnCheckVer">Check if verified</button>
+        </div>
+        <hr>
+        <div>
+            <label for="addToChkBal" class="col-lg-2 control-label">Enter an address to check balance</label>
+            <input id="addToChkBal" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
+            <button id="btnCheckBal">Check balance</button>
+        </div>
+        <hr>
+        <div>
+            <label for="valLiquidChk" class="col-lg-2 control-label">Enter a value to check liquidation</label>
+            <input id="valLiquidChk" type="text" placeholder="1000">
+            <button id="btnCheckLiq">Check Liquidation</button>
+        </div>
+        <hr>
+        <div>
+            <label for="updatePriceTop" class="col-lg-2 control-label">Enter new price</label>
+            <input id="updatePriceTop" type="text" placeholder="New top integer">
+            <button id="btnUpdatePrice">Update Price Numerator</button>
+        </div>
+        <hr>
+        <div>
+            <label for="updatePriceBtm" class="col-lg-2 control-label">Enter new price</label>
+            <input id="updatePriceBtm" type="text" placeholder="New bottom integer">
+            <button id="btnUpdateBtmPrice">Update Price Denominator</button>
+        </div>
+        <hr>
+        <div>
+            <button id="btnCheckSup">Check total supply</button>
+        </div>
+        <hr>
+        <div>
+            <button id="btnCheckSym">Check token symbol</button>
+        </div>
+        <hr>
+        <div>
+            <button id="btnCheckName">Check contract name</button>
+        </div>
+        <hr>
+        <div>
+            <button id="btnCheckSBlk">Check ICO start block</button>
+        </div>
 
-		<h1>DHUCoin Admin Page</h1>
-		<span id="countIns"></span>
+        <hr>
+        <div>
+            <button id="btnCheckEBlk">Check ICO end block</button>
 
-		<h2 id="transactionResult"></h2>
-		<div>
-			<span id="insTrans"></span>
-		</div>
-		<span id="transBlock"></span>
-		<hr>
-
-		<img id="loader" src="https://loading.io/spinners/double-ring/lg.double-ring-spinner.gif">
-
-		<div>
-			<label for="toVerifyAdd" class="col-lg-2 control-label">Enter an address to verify</label>
-			<input id="toVerifyAdd" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
-
-			<button id="btnVerify">Verify Address</button>
-
-		</div>
-
-		<hr>
-		<div>
-			<label for="addToRemove" class="col-lg-2 control-label">Enter an address to invalidate</label>
-			<input id="addToRemove" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
-
-			<button id="btnRemoveAdd">Invalidate Address</button>
-
-		</div>
-
-		<hr>
-		<div>
-			<label for="addToChk" class="col-lg-2 control-label">Enter an address to check the verification status</label>
-			<input id="addToChk" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
-
-			<button id="btnCheckVer">Check if verified</button>
-
-		</div>
-
-		<hr>
-		<div>
-			<label for="addToChkBal" class="col-lg-2 control-label">Enter an address to check balance</label>
-			<input id="addToChkBal" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
-
-			<button id="btnCheckBal">Check balance</button>
-
-		</div>
-
-		<hr>
-		<div>
-			<label for="valLiquidChk" class="col-lg-2 control-label">Enter a value to check liquidation</label>
-			<input id="valLiquidChk" type="text" placeholder="1000">
-
-			<button id="btnCheckLiq">Check Liquidation</button>
-
-		</div>
-
-		<hr>
-		<div>
-			<label for="updatePriceTop" class="col-lg-2 control-label">Enter new price</label>
-			<input id="updatePriceTop" type="text" placeholder="New top integer">
-
-			<button id="btnUpdatePrice">Update Price Numerator</button>
-
-		</div>
-
-		<hr>
-		<div>
-			<label for="updatePriceBtm" class="col-lg-2 control-label">Enter new price</label>
-			<input id="updatePriceBtm" type="text" placeholder="New bottom integer">
-
-			<button id="btnUpdateBtmPrice">Update Price Denominator</button>
-
-		</div>
-
-		<hr>
-		<div>
-			<button id="btnCheckSup">Check total supply</button>
-
-		</div>
-
-		<hr>
-		<div>
-			<button id="btnCheckSym">Check token symbol</button>
-
-		</div>
-
-		<hr>
-		<div>
-			<button id="btnCheckName">Check contract name</button>
-
-		</div>
-
-		<hr>
-		<div>
-			<button id="btnCheckSBlk">Check ICO start block</button>
-
-		</div>
-		
-		<hr>
-		<div>
-			<button id="btnCheckEBlk">Check ICO end block</button>
-			
-		</div>
-
+        </div>
+    </div>
 
 </body>
-
 </html>
