--- a/DHUCoinSmartContract/index.html
+++ b/DHUCoinSmartContract/index.html
@@ -9,10 +9,11 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="./node_modules/web3/dist/web3.min.js"></script>
     <script src="javascript/functions.js" type="text/javascript"></script>
+    <script src="javascript/display_functions.js" type="text/javascript"></script>
 </head>
-
 <body>
-    <div class="container">
+
+    <div class="navbar">
         <h1>DHUCoin Admin Page</h1>
         <span id="countIns"></span>
         <h2 id="transactionResult"></h2>
@@ -20,78 +21,114 @@
             <span id="insTrans"></span>
         </div>
         <span id="transBlock"></span>
-        <hr>
+
         <img id="loader" src="https://loading.io/spinners/double-ring/lg.double-ring-spinner.gif">
+    </div>
+
+    <div class="container">
         <div>
-            <label for="toVerifyAdd" class="col-lg-2 control-label">Enter an address to verify</label>
-            <input id="toVerifyAdd" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
-            <button id="btnVerify">Verify Address</button>
+            <label for="toVerifyAdd" class="col-lg-2 control-label fl">Enter an address to verify</label>
+            <input id="toVerifyAdd" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712" class="fitTextBox">
+            <button id="btnVerify" class="button">Verify Address</button>
         </div>
+
         <hr>
         <div>
             <label for="addToRemove" class="col-lg-2 control-label">Enter an address to invalidate</label>
-            <input id="addToRemove" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
-            <button id="btnRemoveAdd">Invalidate Address</button>
+            <input id="addToRemove" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712" class="fitTextBox">
+            <button id="btnRemoveAdd" class="button">Invalidate Address</button>
         </div>
+
         <hr>
         <div>
             <label for="addMW" class="col-lg-2 control-label">Enter new main wallet address</label>
-            <input id="addMW" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
-            <button id="btnNewMW">Change Address</button>
+            <input id="addMW" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712" class="fitTextBox">
+            <button id="btnNewMW" class="button">Change Address</button>
         </div>
+
+        <hr>
+        <div>
+            <label for="addSW" class="col-lg-2 control-label">Enter new secondary wallet address</label>
+            <input id="addSW" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712" class="fitTextBox">
+            <button id="btnNewSW" class="button">Change Address</button>
+        </div>
+
+        <hr>
+        <div>
+            <label for="newStartBlock" class="col-lg-2 control-label">Enter new ICO start block</label>
+            <input id="newStartBlock" type="text" placeholder="New Start Block" class="fitTextBox">
+            <button id="btnNewStartBlock" class="button">Change start block</button>
+        </div>
+
+        <hr>
+        <div>
+            <label for="newEndBlock" class="col-lg-2 control-label">Enter new ICO end block</label>
+            <input id="newEndBlock" type="text" placeholder="New end Block" class="fitTextBox">
+            <button id="btnNewEndBlock" class="button">Change end block</button>
+        </div>
+
         <hr>
         <div>
             <label for="addToChk" class="col-lg-2 control-label">Enter an address to check the verification status</label>
-            <input id="addToChk" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
-            <button id="btnCheckVer">Check if verified</button>
+            <input id="addToChk" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712" class="fitTextBox">
+            <button id="btnCheckVer" class="button">Check if verified</button>
         </div>
+
         <hr>
         <div>
             <label for="addToChkBal" class="col-lg-2 control-label">Enter an address to check balance</label>
-            <input id="addToChkBal" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712">
-            <button id="btnCheckBal">Check balance</button>
+            <input id="addToChkBal" type="text" placeholder="E.g. 0xbe375fb4db2ea7f8b30e47c798cc6b56bf455712" class="fitTextBox">
+            <button id="btnCheckBal" class="button">Check balance</button>
         </div>
+
         <hr>
         <div>
             <label for="valLiquidChk" class="col-lg-2 control-label">Enter a value to check liquidation</label>
-            <input id="valLiquidChk" type="text" placeholder="1000">
-            <button id="btnCheckLiq">Check Liquidation</button>
+            <input id="valLiquidChk" type="text" placeholder="1000" class="fitTextBox">
+            <button id="btnCheckLiq" class="button">Check Liquidation</button>
         </div>
+
         <hr>
         <div>
             <label for="updatePriceTop" class="col-lg-2 control-label">Enter new price</label>
-            <input id="updatePriceTop" type="text" placeholder="New top integer">
-            <button id="btnUpdatePrice">Update Price Numerator</button>
+            <input id="updatePriceTop" type="text" placeholder="New top integer" class="fitTextBox">
+            <button id="btnUpdatePrice" class="button">Update Price Numerator</button>
         </div>
+
         <hr>
         <div>
             <label for="updatePriceBtm" class="col-lg-2 control-label">Enter new price</label>
-            <input id="updatePriceBtm" type="text" placeholder="New bottom integer">
-            <button id="btnUpdateBtmPrice">Update Price Denominator</button>
-        </div>
-        <hr>
-        <div>
-            <button id="btnCheckSup">Check total supply</button>
-        </div>
-        <hr>
-        <div>
-            <button id="btnCheckSym">Check token symbol</button>
-        </div>
-        <hr>
-        <div>
-            <button id="btnCheckName">Check contract name</button>
-        </div>
-        <hr>
-        <div>
-            <button id="btnCheckSBlk">Check ICO start block</button>
+            <input id="updatePriceBtm" type="text" placeholder="New bottom integer" class="fitTextBox">
+            <button id="btnUpdateBtmPrice" class="button">Update Price Denominator</button>
         </div>
 
         <hr>
         <div>
-            <button id="btnCheckEBlk">Check ICO end block</button>
+            <button id="btnCheckSup" class="button">Check total supply</button>
+        </div>
 
+        <hr>
+        <div>
+            <button id="btnCheckSym" class="button">Check token symbol</button>
+        </div>
+
+        <hr>
+        <div>
+            <button id="btnCheckName" class="button">Check contract name</button>
+        </div>
+
+        <hr>
+        <div>
+            <button id="btnCheckSBlk" class="button">Check ICO start block</button>
+        </div>
+
+        <hr>
+        <div>
+            <button id="btnCheckEBlk" class="button">Check ICO end block</button>
         </div>
     </div>
+
+    <button id="floatButton" title="Go to top">Top</button>
 
 </body>
 </html>
