More design Events added in the contract

--- a/DHUCoinSmartContract/index.html
+++ b/DHUCoinSmartContract/index.html
@@ -21,8 +21,9 @@
             <span id="insTrans"></span>
         </div>
         <span id="transBlock"></span>
-
-        <img id="loader" src="https://loading.io/spinners/double-ring/lg.double-ring-spinner.gif">
+        
+        <!-- <img id="loader" src="https://loading.io/spinners/double-ring/lg.double-ring-spinner.gif"> -->
+        <img id="loader" src="img/Loading.gif">
     </div>
 
     <div class="container">
@@ -84,7 +85,7 @@
         <hr>
         <div>
             <label for="valLiquidChk" class="col-lg-2 control-label">Enter a value to check liquidation</label>
-            <input id="valLiquidChk" type="text" placeholder="1000" class="fitTextBox">
+            <input id="valLiquidChk" type="text" placeholder="E.g. 1000" class="fitTextBox">
             <button id="btnCheckLiq" class="button">Check Liquidation</button>
         </div>
 
